# libmultialn

./: .gitignore  CMakeLists.txt  FindLibCDS.cmake  README
examples/: CMakeLists.txt  bitseq_assess.cpp  generate_random_positions.cpp  map_positions.cpp  map_regions.cpp  random_positions.cpp  referenced_memory_size.cpp  referenced_memory_size.h
include/: AlignmentBlock.h  AlignmentBlockStorage.h  BinSearchAlignmentBlockStorage.h  BitSequenceDummy.h  BitSequenceFactory.h  MafReader.h  MultialnConstants.h  RankAlignmentBlockStorage.h  SequenceDetails.h  WholeGenomeAlignment.h
src/: AlignmentBlock.cpp  AlignmentBlockStorage.cpp  BinSearchAlignmentBlockStorage.cpp  CMakeLists.txt  MafReader.cpp  RankAlignmentBlockStorage.cpp  SequenceDetails.cpp  WholeGenomeAlignment.cpp
test/: AlignmentBlock.cpp  AlignmentBlockStorage.cpp  BitSequence.cpp  BitSequenceFactoryDeclarations.h  BitSequenceFactoryDefinitions.cpp  CMakeLists.txt  MafReader.cpp  SequenceDetails.cpp  SequenceGenerator.cpp  SequenceGenerator.h  WholeGenomeAlignment.cpp
utils/: alignment_density.py  bitseq_assess.py  block_lengths.py  count_sequences.py
