CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(libmultialn)

OPTION(ENABLE_TEST "Enable unit tests" OFF)
SET(BITSEQ_IMPLEMENTATION "RG" CACHE STRING
    "Select the BitSequence implementation to be used")
SET_PROPERTY(CACHE BITSEQ_IMPLEMENTATION PROPERTY STRINGS
    "RG" "RRR" "SDArray")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++0x")

# We need to extend CMAKE_MODULE_PATH to our PROJECT_SOURCE_DIR since we
# hold the FindLibCDS.cmake file and the project itself doesn't ship
# LibCDSConfig.cmake.
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR})

FIND_PACKAGE(LibCDS REQUIRED)

INCLUDE_DIRECTORIES(${LIBCDS_INCLUDE_DIRS})

ADD_SUBDIRECTORY(src)
IF(ENABLE_TEST)
    ENABLE_TESTING()
    ADD_SUBDIRECTORY(test)
ENDIF(ENABLE_TEST)
